@@ -44,6 +44,7 @@ importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,segments)
+importFrom(mgcv,uniquecombs)
 importFrom(numDeriv,grad)
 importFrom(statmod,qres.binom)
 importFrom(statmod,qres.nbinom)
